--- a/docs/style.css
+++ b/docs/style.css
@@ -36,6 +36,11 @@ header{
     padding-left: 10px;
     list-style: none;
 }
+.nav-bar li  a{
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
 .head{
     display: flex;
     flex-direction: column;
